objects/LLC_BI__Requirement_Category__c.object
<CustomObject>
    <description>The Requirement Category object configures categories for Smart Checklist.</description>
    <fields>
        <fullName>LLC_BI__Context_Type__c</fullName>
        <description>The system automatically populates this field with a context object.</description>
        <inlineHelpText>The system automatically populates this field with a context object.</inlineHelpText>
        <label>Context Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Criteria__c</fullName>
        <description>The administrator populates this optional field with criteria that dictates if the Category displays or not.</description>
        <inlineHelpText>Populate this optional field with criteria that dictates if the Category displays or not.</inlineHelpText>
        <label>Criteria</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Field_Set__c</fullName>
        <description>The administrator populates this optional field with the field set API name. This field set displays after the administrator selects Category, when creating or editing a Requirement.</description>
        <inlineHelpText>Populate this optional field with the field set API name.</inlineHelpText>
        <label>Field Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>The administrator selects this field as true if the Category should be active. By default, it is true.</description>
        <inlineHelpText>Select this field as true if the category should be active.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>This field is optional. If populated, the value must be unique across all the records of this type. This field typically contains an external identifier used to associate the record with its matching record in an external system. You can also use this field to efficiently associate related records, when importing data into nCino, without the need to know the internal ID of the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter a unique identifier</inlineHelpText>
        <label>Lookup Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Requirement Category</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requirement Categories</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>